modules/app-infra/db.tf
# Create a subnet group specifically for RDS.
# This tells AWS which private subnets the RDS instance can live in
resource "aws_db_subnet_group" "rds" {
  name       = "${var.infra_env}-rds-subnet-group"
  subnet_ids = aws_subnet.private[*].id

  tags = {
    Name = "${var.infra_env}-rds-subnet-group"
  }
}

resource "aws_db_instance" "mysql" {
  identifier             = "${var.infra_env}-mysql-8"
  allocated_storage      = 20 # 20GB
  engine                 = "mysql"
  engine_version         = "8.0"
  instance_class         = var.rds_instance_class
  username               = var.rds_username
  password               = var.rds_password
  db_subnet_group_name   = aws_db_subnet_group.rds.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]

  publicly_accessible = false
  multi_az            = false #single-az
  skip_final_snapshot = true
  apply_immediately   = true

  tags = {
    Name = "${var.infra_env}-mysql-8"
  }
}
